--- a/server/service/Cargo.toml
+++ b/server/service/Cargo.toml
@@ -54,7 +54,7 @@ walkdir = "2.5.0"
 x509-parser = { version = "0.16", features = ["verify"] }
 telnet = "0.2.1"
 tempfile = "3.10.1"
-
+umya-spreadsheet = "2.0"
 
 [dev-dependencies]
 actix-rt = { workspace = true }
